--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,14 @@ postcard = "1.0.10"
 serde = {version = "1.0.150", default-features = false, features = ["derive"]}
 nb = "1.1.0"
 heapless = "0.7.17"
+
+[profile.release]
+strip = true 
+opt-level = "z"
+lto = true
+panic = "abort"
+codegen-units = 1
+
+[[bin]]
+name = "workshop"
+harness = false
